Add test to check only the first page results, remove test to check only the cart logic.